# Case_Engine

./: CMakeLists.txt  LICENSE  Readme.md  build.bat
source/: CMakeLists.txt  main.cpp  pch.h
source/Core/: Defines.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Paths.cpp  Paths.h  Window.cpp  Window.h
source/Editors/: Editor.cpp  Editor.h  EditorLogger.cpp  EditorLogger.h  GUI.cpp  GUI.h
source/Editors/TextEditor/: TextEditor.cpp  TextEditor.h
source/Graphics/: GfxBuffer.h  GfxCommandContext.cpp  GfxCommandContext.h  GfxConstantBuffer.h  GfxDefines.h  GfxDevice.cpp  GfxDevice.h  GfxFormat.h  GfxInputLayout.cpp  GfxInputLayout.h  GfxProfiler.cpp  GfxProfiler.h  GfxQuery.cpp  GfxQuery.h  GfxRenderPass.h  GfxResourceCommon.h  GfxScopedAnnotation.cpp  GfxScopedAnnotation.h  GfxShader.h  GfxShaderCompiler.cpp  GfxShaderCompiler.h  GfxShaderProgram.cpp  GfxShaderProgram.h  GfxStates.cpp  GfxStates.h  GfxTexture.h  GfxVertexFormat.h  GfxView.h
source/Math/: BoundingVolumeHelpers.h  ComputeNormals.h  ComputeTangentFrame.h  Constants.h  Halton.h  MathTypes.h
source/Rendering/: Camera.cpp  Camera.h  Components.cpp  Components.h  ConstantBuffers.h  Enums.h  ModelImporter.cpp  ModelImporter.h  ParticleRenderer.cpp  ParticleRenderer.h  Picker.h  Renderer.cpp  Renderer.h  RendererSettings.h  SceneViewport.h  ShaderManager.cpp  ShaderManager.h  SkyModel.cpp  SkyModel.h  Terrain.cpp  Terrain.h  TextureManager.cpp  TextureManager.h
source/Saved/Ini/: imgui.ini  scene.json
source/Shaders/: Common.hlsli  CommonData.hlsli  Constants.hlsli
source/Shaders/GBuffer/: Decal.hlsl  Foliage.hlsl  GBuffer.hlsl  Terrain.hlsl
source/Shaders/Lighting/: Ambient.hlsl  ClusterBuilding.hlsl  ClusterCulling.hlsl  ClusterLighting.hlsl  DeferredLighting.hlsl  Equirect2cubeCS.hlsl  IrmapCS.hlsl  SpbrdfCS.hlsl  SpmapCS.hlsl  TiledLighting.hlsl
source/Shaders/Misc/: Billboard.hlsl  HosekWilkieSky.hlsl  Picker.hlsl  Shadow.hlsl  Skybox.hlsl  Solid.hlsl  Sun.hlsl  Texture.hlsl  UniformSky.hlsl
source/Shaders/Ocean/: FFT_Horizontal.hlsl  FFT_Vertical.hlsl  InitialSpectrum.hlsl  NormalMap.hlsl  Ocean.hlsl  OceanLod.hlsl  Phase.hlsl  Spectrum.hlsl
source/Shaders/Particles/: BitonicSortStep.hlsl  InitDeadList.hlsl  InitSortDispatchArgs.hlsl  Particle.hlsl  ParticleEmit.hlsl  ParticleReset.hlsl  ParticleSimulate.hlsl  ParticleUtil.hlsli  Sort512.hlsl  SortInner512.hlsl
source/Shaders/Postprocess/: AddTextures.hlsl  BloomCombine.hlsl  BloomExtract.hlsl  Blur.hlsl  Bokeh.hlsl  BokehGeneration.hlsl  CopyTexture.hlsl  DepthOfField.hlsl  FXAA.hlsl  FilmEffects.hlsl  Fog.hlsl  FullscreenQuad.hlsl  GodRays.hlsl  HBAO.hlsl  LensFlare.hlsl  MotionBlur.hlsl  MotionVectors.hlsl  SSAO.hlsl  SSR.hlsl  TAA.hlsl  ToneMap.hlsl  VolumetricClouds.hlsl  VolumetricLighting_Cascades.hlsl  VolumetricLighting_Directional.hlsl  VolumetricLighting_Point.hlsl  VolumetricLighting_Spot.hlsl
source/Shaders/Util/: DitherUtil.hlsli  LightUtil.hlsli  ShadowUtil.hlsli  ToneMapUtil.hlsli  VoxelUtil.hlsli
source/Utilities/: AllocatorUtil.h  AutoRefCountPtr.h  CLIParser.h  ConcurrentQueue.h  Delegate.h  EnumUtil.h  FileWatcher.h  FilesUtil.h  HashMap.h  HashSet.h  HashUtil.h  Heightmap.cpp  Heightmap.h  Image.cpp  Image.h  JsonUtil.h  LinearAllocator.h  MemoryDebugger.h  Random.h  RingAllocator.h  RingBuffer.h  Singleton.h  StringUtil.cpp  StringUtil.h  TemplatesUtil.h  ThreadPool.h  Timer.h
source/tecs/: component_pool.h  entity.h  entity_view.h  registry.h  sparse_set.h
